--- a/index.html
+++ b/index.html
@@ -103,9 +103,9 @@
         <p>Amor, você é a razão do meu viver...</p>
 
         <div class="center-image">
-            <img src="imagem_grande.jpg" class="center-image">
-            <img src="imagem_pequena1.jpg" class="small-image left-small">
-            <img src="imagem_pequena2.jpg" class="small-image right-small">
+            <img src="IMG-20250304.WA0003.jpg" class="center-image">
+            <img src="IMG-20250304.WA0004.jpg" class="small-image left-small">
+            <img src="IMG-20250304.WA0006.jpg" class="small-image right-small">
         </div>
 
         <div class="hearts">
