--- a/index.html
+++ b/index.html
@@ -1,116 +1,37 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Para a minha Julia</title>
-    <style>
-        body {
-            background-color: #ffeb3b; /* Cor da Lufa-Lufa */
-            text-align: center;
-            font-family: 'Arial', sans-serif;
-            color: #4e342e;
-            overflow-x: hidden;
-            position: relative;
-        }
-
-        .container {
-            margin-top: 50px;
-            position: relative;
-            z-index: 1; /* Para garantir que o conteúdo fique abaixo dos corações */
-        }
-
-        h1 {
-            font-size: 2em;
-            color: #3e2723;
-        }
-
-        p {
-            font-size: 1.2em;
-        }
-
-        /* Player do Spotify */
-        .spotify-player {
-            margin: 20px auto;
-            width: 80%;
-            max-width: 400px;
-        }
-
-        /* Imagem central */
-        .center-image {
-            width: 90%;
-            max-width: 600px;
-            display: block;
-            margin: 20px auto;
-            position: relative;
-            overflow: hidden; /* Mantém as imagens pequenas dentro */
-        }
-
-        /* Imagens animadas dentro da central */
-        .small-image {
-            width: 80px; /* Tamanho menor */
-            position: absolute;
-            animation: moveUpDown 3s infinite alternate ease-in-out;
-        }
-
-        .left-small {
-            left: 10%;
-            animation-delay: 0s; /* Começa imediatamente */
-        }
-
-        .right-small {
-            right: 10%;
-            animation-delay: 1.5s; /* Pequeno atraso para efeito alternado */
-        }
-
-        /* Animação de sobe e desce */
-        @keyframes moveUpDown {
-            0% { transform: translateY(10px); }
-            100% { transform: translateY(-10px); }
-        }
-
-        /* Corações animados */
-        .hearts {
-            position: absolute;
-            width: 100%;
-            height: 100%;
-            pointer-events: none;
-            top: 0;
-            left: 0;
-            z-index: 10;
-        }
-
-        .heart {
-            position: absolute;
-            color: red;
-            font-size: 20px;
-            animation: floatUp 5s linear infinite;
-        }
-
-        @keyframes floatUp {
-            0% { transform: translateY(100vh); opacity: 1; }
-            100% { transform: translateY(-100vh); opacity: 0; }
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
     <div class="container">
         <h1>✨ Para a minha Julia ✨</h1>
         <p>Feito com muito amor por alguém que te ama muito! 💛</p>
 
-        <iframe class="spotify-player" src="https://open.spotify.com/embed/track/6pQhGCLlG4h5tN3EAsFZvz" width="100%" height="152" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+        <!-- Player do Spotify -->
+        <iframe class="spotify-player" src="https://open.spotify.com/embed/track/SEU_LINK_AQUI" width="100%" height="152" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
 
-        <p>Amor, você é a razão do meu viver...</p>
+        <p>Amor, você é a razão do meu viver. Passar meus dias com você fez tudo melhorar. 
+            Você é incrível do jeito que é, eu te amo muito! Espero que tudo seja como o planejado, 
+            porque eu te quero pro resto da minha vida. 💛</p>
 
-        <div class="center-image">
-            <img src="IMG-20250304.WA0003.jpg" class="center-image">
-            <img src="IMG-20250304.WA0004.jpg" class="small-image left-small">
-            <img src="IMG-20250304.WA0006.jpg" class="small-image right-small">
-        </div>
+        <!-- Imagem do centro (mais larga) -->
+        <img src="IMG-20250304-WA0006.jpg" class="imagem-centro">
 
-        <div class="hearts">
-            ❤️❤️❤️
-        </div>
+        <!-- Imagens laterais animadas -->
+        <img src="IMG-20250304-WA0003.jpg" class="imagem-esquerda">
+        <img src="IMG-20250304-WA0004.jpg" class="imagem-direita">
+
+        <!-- Corações animados -->
+        <div class="hearts"></div>
+
     </div>
+
+    <script src="script.js"></script>
+
 </body>
 </html>
