--- a/index.html
+++ b/index.html
@@ -12,8 +12,13 @@
         <h1>✨ Para a minha Julia ✨</h1>
         <p>Feito com muito amor por alguém que te ama muito! 💛</p>
 
-        <!-- Player do Spotify -->
-        <iframe class="spotify-player" src="https://open.spotify.com/embed/track/SEU_LINK_AQUI" width="100%" height="152" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+        <!-- Novo player de áudio -->
+        <div class="audio-player">
+            <audio controls>
+                <source src="spotidownloader.com - Pra Sempre Com Você - Ao Vivo - Jorge & Mateus.mp3" type="audio/mp3">
+                Seu navegador não suporta o elemento de áudio.
+            </audio>
+        </div>
 
         <p>Amor, você é a razão do meu viver. Passar meus dias com você fez tudo melhorar. 
             Você é incrível do jeito que é, eu te amo muito! Espero que tudo seja como o planejado, 
@@ -22,9 +27,11 @@
         <!-- Imagem do centro (mais larga) -->
         <img src="IMG-20250304-WA0006.jpg" class="imagem-centro">
 
-        <!-- Imagens laterais animadas -->
-        <img src="IMG-20250304-WA0003.jpg" class="imagem-esquerda">
-        <img src="IMG-20250304-WA0004.jpg" class="imagem-direita">
+        <!-- Imagens laterais animadas dentro da imagem central -->
+        <div class="imagem-centralizada">
+            <img src="IMG-20250304-WA0003.jpg" class="imagem-esquerda">
+            <img src="IMG-20250304-WA0004.jpg" class="imagem-direita">
+        </div>
 
         <!-- Corações animados -->
         <div class="hearts"></div>
