--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
         <h1>✨ Para a minha Julia ✨</h1>
         <p>Feito com muito amor por alguém que te ama muito! 💛</p>
 
-        <!-- Novo player de áudio -->
+        <!-- Player de Música Personalizado -->
         <div class="audio-player">
             <audio controls>
-                <source src="spotidownloader.com - Pra Sempre Com Você - Ao Vivo - Jorge & Mateus.mp3" type="audio/mp3">
-                Seu navegador não suporta o elemento de áudio.
+                <source src="spotidownloader.com - Pra Sempre Com Você - Ao Vivo - Jorge & Mateus.mp3" type="audio/mpeg">
+                Seu navegador não suporta o player de áudio.
             </audio>
         </div>
 
@@ -24,11 +24,9 @@
             Você é incrível do jeito que é, eu te amo muito! Espero que tudo seja como o planejado, 
             porque eu te quero pro resto da minha vida. 💛</p>
 
-        <!-- Imagem do centro (mais larga) -->
-        <img src="IMG-20250304-WA0006.jpg" class="imagem-centro">
-
-        <!-- Imagens laterais animadas dentro da imagem central -->
+        <!-- Imagem do centro com as laterais dentro -->
         <div class="imagem-centralizada">
+            <img src="IMG-20250304-WA0006.jpg" class="imagem-centro">
             <img src="IMG-20250304-WA0003.jpg" class="imagem-esquerda">
             <img src="IMG-20250304-WA0004.jpg" class="imagem-direita">
         </div>
